--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Refresh" content="3; url=https://raynep027.github.io/dtbr-keyboards/home.html">
+    <title>DTBR Keyboards</title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
