--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -2,10 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Refresh" content="3; url=https://raynep027.github.io/dtbr-keyboards/home.html">
-    <title>DTBR Keyboards</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DTBR Keyboards - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script src="scripts/home.js"></script>
 </head>
 <body>
 
+<!-- Search Bar Section -->
+<div class="search-bar-bg">
+    <div class="container d-flex align-items-center">
+        <a class="navbar-brand" href="index.html"><img src="images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
+        <span class="ml-3 text-white">DTBR Keyboards</span>
+    </div>
+</div>
+<!--Nav Bar-->
+<nav class="nav navbar navbar-expand-sm navbar-dark navbar-bg">
+    <div class="container">
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navBarNavAltMarkup"
+                aria-controls="navBarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navBarNavAltMarkup">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/KeychronQ3.html">Showcase</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/Subscriptions.html">Subscriptions</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/Setups.html">Setups</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/FAQPage.html">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="views/contact-us.html">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Main Content -->
+<div class="main-content container shadow-lg">
+    <!-- Product Section -->
+    <div class="row">
+        <div class="col-md-6">
+            <img src="images/Keyboard%20Pictures/Zoom75Side.jpg" alt="Sample Product" class="img-fluid rounded-5" id="mainImg">
+        </div>
+        <div class="col-md-6">
+            <h1>Zoom75 Essential Edition </h1>
+            <a class="btn btn-primary" href="views/Zoom75.html" role="button">Details</a>
+            <!--<button class="btn btn-primary">Details</button>-->
+        </div>
+    </div>
+
+    <!-- Carousel Section -->
+    <div id="productCarousel" class="carousel slide mt-5" data-bs-ride="carousel">
+
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        </div>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="rounded-5" src="images/Keyboard%20Pictures/KeychronDesk.jpg" alt="Keyboard 3">
+                <div class="carousel-caption">
+                    <h5>Keychron</h5>
+                    <p>$120</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="rounded-5" src="images/Keyboard%20Pictures/BakenekoPegboard.jpg" alt="Keyboard 2">
+                <div class="carousel-caption">
+                    <h5>Bakeneko65</h5>
+                    <p>$208.00</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="rounded-5" src="images/Keyboard%20Pictures/3BoardSpread.jpg" alt="Keyboard 1">
+                <div class="carousel-caption">
+                    <h5>3 of our BEST BOARDS</h5>
+                    <p>$519.99</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="rounded-5" src="images/Keyboard%20Pictures/KeychronByWall.jpg" alt="Keyboard 4">
+                <div class="carousel-caption">
+                    <h5>Keychron Extra</h5>
+                    <p>$120</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="rounded-5" src="images/Keyboard%20Pictures/3BoardSpread2.jpg" alt="Keyboard 5">
+                <div class="carousel-caption">
+                    <h5>Out Standing Deal</h5>
+                    <p>$480.68</p>
+                </div>
+            </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </a>
+    </div>
+</div>
+
+<!-- Subscribe Section -->
+<div class="subscribe-section">
+    <div class="container">
+        <div class="row">
+            <h2 class="col-md-12">Subscribe to our FREE email newsletter!</h2>
+            <form class="form-inline col-md-12">
+                <div class="form-group mb-2">
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2 ml-2">Sign Up</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+    <!--&copy; for the copyright sign-->
+    <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+</div>
 </body>
 </html>
