--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="Final%20Project/styles/home.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-    <script src="scripts/home.js"></script>
+    <script src="Final%20Project/scripts/home.js"></script>
 </head>
 <body>
 
 <!-- Search Bar Section -->
 <div class="search-bar-bg">
     <div class="container d-flex align-items-center">
-        <a class="navbar-brand" href="index.html"><img src="images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
+        <a class="navbar-brand" href="index.html"><img src="Final%20Project/images/CWEB%20LOGO.png" alt="Logo" style="height: 90px;"></a>
         <span class="ml-3 text-white">DTBR Keyboards</span>
     </div>
 </div>
@@ -34,13 +34,13 @@
         <div class="collapse navbar-collapse" id="navBarNavAltMarkup">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/KeychronQ3.html">Showcase</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/accessories.html">Accessories</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/Subscriptions.html">Subscriptions</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/Setups.html">Setups</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/FAQPage.html">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link" href="views/contact-us.html">Contact Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/KeychronQ3.html">Showcase</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/accessories.html">Accessories</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/Subscriptions.html">Subscriptions</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/Setups.html">Setups</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/FAQPage.html">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="Final%20Project/views/contact-us.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -51,11 +51,11 @@
     <!-- Product Section -->
     <div class="row">
         <div class="col-md-6">
-            <img src="images/Keyboard%20Pictures/Zoom75Side.jpg" alt="Sample Product" class="img-fluid rounded-5" id="mainImg">
+            <img src="Final%20Project/images/Keyboard%20Pictures/Zoom75Side.jpg" alt="Sample Product" class="img-fluid rounded-5" id="mainImg">
         </div>
         <div class="col-md-6">
             <h1>Zoom75 Essential Edition </h1>
-            <a class="btn btn-primary" href="views/Zoom75.html" role="button">Details</a>
+            <a class="btn btn-primary" href="Final%20Project/views/Zoom75.html" role="button">Details</a>
             <!--<button class="btn btn-primary">Details</button>-->
         </div>
     </div>
@@ -74,35 +74,35 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="rounded-5" src="images/Keyboard%20Pictures/KeychronDesk.jpg" alt="Keyboard 3">
+                <img class="rounded-5" src="Final%20Project/images/Keyboard%20Pictures/KeychronDesk.jpg" alt="Keyboard 3">
                 <div class="carousel-caption">
                     <h5>Keychron</h5>
                     <p>$120</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="rounded-5" src="images/Keyboard%20Pictures/BakenekoPegboard.jpg" alt="Keyboard 2">
+                <img class="rounded-5" src="Final%20Project/images/Keyboard%20Pictures/BakenekoPegboard.jpg" alt="Keyboard 2">
                 <div class="carousel-caption">
                     <h5>Bakeneko65</h5>
                     <p>$208.00</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="rounded-5" src="images/Keyboard%20Pictures/3BoardSpread.jpg" alt="Keyboard 1">
+                <img class="rounded-5" src="Final%20Project/images/Keyboard%20Pictures/3BoardSpread.jpg" alt="Keyboard 1">
                 <div class="carousel-caption">
                     <h5>3 of our BEST BOARDS</h5>
                     <p>$519.99</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="rounded-5" src="images/Keyboard%20Pictures/KeychronByWall.jpg" alt="Keyboard 4">
+                <img class="rounded-5" src="Final%20Project/images/Keyboard%20Pictures/KeychronByWall.jpg" alt="Keyboard 4">
                 <div class="carousel-caption">
                     <h5>Keychron Extra</h5>
                     <p>$120</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="rounded-5" src="images/Keyboard%20Pictures/3BoardSpread2.jpg" alt="Keyboard 5">
+                <img class="rounded-5" src="Final%20Project/images/Keyboard%20Pictures/3BoardSpread2.jpg" alt="Keyboard 5">
                 <div class="carousel-caption">
                     <h5>Out Standing Deal</h5>
                     <p>$480.68</p>
